setting up basics of the html file

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>My Resume</title>
+  <title>Amanita Blackwood</title>
 
   <link rel="stylesheet" href="css/index.css">
 
@@ -14,6 +14,35 @@
 </head>
 
 <body>
-  <h1>My Resume</h1>
+  <header>
+    <nav>
+      <a href="#">Intro</a>
+      <a href="#">Skills</a>
+      <a href="#">Porfolio</a>
+      <a href="#">Contact</a>
+    </nav>
+    <div>
+      <h4>Amanita Blackwood</h4>
+    </div>
+  </header>
+
+  <div class="main-content"> <!--opens main-content div-->
+    <section class="intro"> <!--opens intro-->
+     <h1>Amanita Blackwood ~ Potions Aficionado</h1> 
+     <p>~ brief blurb here ~</p>
+     <br>
+     <p>I do take custom potion order requests. Need some <mark class="gold">liquid luck</mark> for that big interview? Head on over to this website</p>
+     <button class="luck">Get Liquid Luck</button>
+    </section> <!--closes intro-->
+
+    <section class="skills"> <!--opens skills-->
+      <h2>My Skills</h2>
+      <div class="container"> <!--opens big container div-->
+        <div> <!--opens little div #1-->
+        <h3>Potion Making</h3>
+        </div><!--closes little div #1-->
+      </div><!--closes big container div-->
+    </section> <!--closes skills-->
+  </div> <!--closes main-content div-->
 </body>
 </html>
