completed html. starting on css

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <a href="#">Intro</a>
       <a href="#">Skills</a>
       <a href="#">Porfolio</a>
-      <a href="#">Contact</a>
+      <a href="https://www.twistedfae.com/portfolio">Contact</a>
     </nav>
     <div>
       <h4>Amanita Blackwood</h4>
@@ -32,17 +32,56 @@
      <p>~ brief blurb here ~</p>
      <br>
      <p>I do take custom potion order requests. Need some <mark class="gold">liquid luck</mark> for that big interview? Head on over to this website</p>
-     <button class="luck">Get Liquid Luck</button>
+     <button class="luck" href="https://www.twistedfae.com/portfolio" alt="Link to TwistedFae's Portfolio">Get Liquid Luck</button>
     </section> <!--closes intro-->
 
     <section class="skills"> <!--opens skills-->
       <h2>My Skills</h2>
-      <div class="container"> <!--opens big container div-->
+      <div class="container1"> <!--opens big container div-->
         <div> <!--opens little div #1-->
-        <h3>Potion Making</h3>
+          <i class="fas fa-book-dead"></i>
+          <h3>Potion Making</h3>
+          <p>I have excelled at potion making for centuries. I started when I was a wee Fae & have only grown my skills through the ages. I make both healing & baneful potions.</p>
         </div><!--closes little div #1-->
+        <div> <!--opens little div #2-->
+            <i class="fas fa-leaf"></i>
+            <h3>Herbology</h3>
+            <p>A crucial skill to potion making (and really to any type of magic) is being skilled with flora, especially herbs. I cultivate rare and common flora, both magical and mundane. </p>
+        </div> <!--closes little div #2-->
+        <div> <!--opens little div #3-->
+            <i class="fas fa-crow"></i>
+            <h3>Fae Magics</h3>
+            <p>As a descendant of a very long, prominent UnSeelie Royal Line, I am highly talented & practiced in Fae Magics. Training with this skill, starts at a very young age, even before that of Herbology & Potion Making.</p>
+        </div> <!--closes little div #3-->
       </div><!--closes big container div-->
     </section> <!--closes skills-->
+
+    <section class="work"> <!--opens work history-->
+      <h2>Work History</h2>
+      <div class="container2"> <!--opens big container div-->
+          <div class="one"> <!--opens small div #1-->
+            <h3>TwistedFae</h3>
+            <h4>Head of Apothecary</h4>
+          </div> <!--closes small div #1-->
+          <div class="two"> <!--opens small div #2-->
+            <img src=/ alt="TwistedFae's Logo">
+          </div> <!--closes small div #2-->
+          <div class="three">
+            <p>I have been working at TwistedFae since it's inception. I run the apothecary side of this small creative business. I help Fae with gathering all the flora needed for poisons and potions, and help market them to our client base.</p>
+          </div> <!--closes small div #3-->
+      </div> <!--closes big container div-->
+    </section> <!--closes work history-->
+
+    <section class="contact"> <!--opens contact section-->
+      <h2>Contact</h2>
+      <h3>Are you looking for revenge? Luck? Or maybe just some art prints or stickers?</h3>
+      <button class="click" a href="https://www.twistedfae.com/commissions" alt="Link to TwistedFae's Commissions">Potions and Poisons and Art, Oh My!</button>
+    </section> <!--closes contact section-->
   </div> <!--closes main-content div-->
+
+  <footer>
+    <small>Disclaimer: Purchase of Poisons, Potions, or Art could result in the loss of your Soul. Remember making deals with the Fae is a dangerous and risky endeavor. You have been warned.</small>
+    <h6>Copyright TwistedFae 2019 in conjunction with IsaRaeArt/Coding_Rae 2019</h6>
+  </footer>
 </body>
 </html>
