completed header css ... working on main content css

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 <body>
   <header>
     <nav>
-      <a href="#">Intro</a>
-      <a href="#">Skills</a>
-      <a href="#">Porfolio</a>
-      <a href="https://www.twistedfae.com/portfolio">Contact</a>
+      <a class = "navClass" href=".intro">Intro</a>
+      <a class = "navClass" href=".skills">Skills</a>
+      <a class = "navClass" href="https://www.twistedfae.com/portfolio">Porfolio</a>
+      <a class = "navClass" href="https://www.twistedfae.com/commissions">Contact</a>
     </nav>
-    <div>
+    <div class="name">
       <h4>Amanita Blackwood</h4>
     </div>
   </header>
@@ -29,7 +29,7 @@
   <div class="main-content"> <!--opens main-content div-->
     <section class="intro"> <!--opens intro-->
      <h1>Amanita Blackwood ~ Potions Aficionado</h1> 
-     <p>~ brief blurb here ~</p>
+     <p>I am blunt and have no time for beating around the bush. I'm meticulous and pay close attention to the details of my work since each potion, charm, and spell is made specifically for the user. I like to collect odds n ends,  but my favorite are the souls I've collected due to breach of contract. Among other things, you can normally spot me in a patch of inky cap mushrooms if your lucky enough.</p>
      <br>
      <p>I do take custom potion order requests. Need some <mark class="gold">liquid luck</mark> for that big interview? Head on over to this website</p>
      <button class="luck" href="https://www.twistedfae.com/portfolio" alt="Link to TwistedFae's Portfolio">Get Liquid Luck</button>
@@ -81,7 +81,7 @@
 
   <footer>
     <small>Disclaimer: Purchase of Poisons, Potions, or Art could result in the loss of your Soul. Remember making deals with the Fae is a dangerous and risky endeavor. You have been warned.</small>
-    <h6>Copyright TwistedFae 2019 in conjunction with IsaRaeArt/Coding_Rae 2019</h6>
+    <h6>Copyright TwistedFae 2019 in conjunction with IsaRaeArt 2019 & Coding_Rae 2019</h6>
   </footer>
 </body>
 </html>
