--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
     <section class="intro"> <!--opens intro-->
      <h1>Amanita Blackwood ~ Potions Aficionado</h1> 
      <p>I am blunt and have no time for beating around the bush. I'm meticulous and pay close attention to the details of my work since each potion, charm, and spell is made specifically for the user. I like to collect odds n ends,  but my favorite are the souls I've collected due to breach of contract. Among other things, you can normally spot me in a patch of inky cap mushrooms if your lucky enough.</p>
-     <br>
-     <p>I do take custom potion order requests. Need some <mark class="gold">liquid luck</mark> for that big interview? Head on over to this website</p>
-     <button class="luck" href="https://www.twistedfae.com/portfolio" alt="Link to TwistedFae's Portfolio">Get Liquid Luck</button>
+     <p>I do take custom potion order requests. Need some <mark class="luck">liquid luck</mark> for that big interview? Head on over to this website</p>
+     <button class="luckButton" href="https://www.twistedfae.com/portfolio" alt="Link to TwistedFae's Portfolio">Get Liquid Luck</button>
     </section> <!--closes intro-->
 
     <section class="skills"> <!--opens skills-->
