--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <html lang="en">
 <head>
+  <script src="https://kit.fontawesome.com/a6e4a25591.js" crossorigin="anonymous"></script>
   <meta charset="utf-8">
 
   <title>Amanita Blackwood</title>
@@ -28,29 +29,31 @@
 
   <div class="main-content"> <!--opens main-content div-->
     <section class="intro"> <!--opens intro-->
-     <h1>Amanita Blackwood ~ Potions Aficionado</h1> 
-     <p>I am blunt and have no time for beating around the bush. I'm meticulous and pay close attention to the details of my work since each potion, charm, and spell is made specifically for the user. I like to collect odds n ends,  but my favorite are the souls I've collected due to breach of contract. Among other things, you can normally spot me in a patch of inky cap mushrooms if your lucky enough.</p>
-     <p>I do take custom potion order requests. Need some <mark class="luck">liquid luck</mark> for that big interview? Head on over to this website</p>
-     <button class="luckButton" href="https://www.twistedfae.com/portfolio" alt="Link to TwistedFae's Portfolio">Get Liquid Luck</button>
+      <h1>Amanita Blackwood ~ Potions Aficionado</h1> 
+      <p>I am blunt and have no time for beating around the bush. I'm meticulous and pay close attention to the details of my work since each potion, charm, and spell is made specifically for the user. I like to collect odds n ends,  but my favorite are the souls I've collected due to breach of contract. Among other things, you can normally spot me in a patch of inky cap mushrooms if your lucky enough.</p>
+      <p>I do take custom potion order requests. Need some <mark class="luck">liquid luck</mark> for that big interview? Head on over to this website</p>
+      <button class="luckButton" href="https://www.twistedfae.com/portfolio" alt="Link to TwistedFae's Portfolio">Get Liquid Luck</button>
     </section> <!--closes intro-->
 
     <section class="skills"> <!--opens skills-->
       <h2>My Skills</h2>
       <div class="container1"> <!--opens big container div-->
-        <div> <!--opens little div #1-->
-          <i class="fas fa-book-dead"></i>
+        <div class="potions"> <!--opens little div #1-->
           <h3>Potion Making</h3>
           <p>I have excelled at potion making for centuries. I started when I was a wee Fae & have only grown my skills through the ages. I make both healing & baneful potions.</p>
+          <i class="fas fa-book-dead"></i>
         </div><!--closes little div #1-->
-        <div> <!--opens little div #2-->
-            <i class="fas fa-leaf"></i>
+
+        <div class="herbs"> <!--opens little div #2-->
             <h3>Herbology</h3>
             <p>A crucial skill to potion making (and really to any type of magic) is being skilled with flora, especially herbs. I cultivate rare and common flora, both magical and mundane. </p>
+            <i class="fas fa-leaf"></i>
         </div> <!--closes little div #2-->
-        <div> <!--opens little div #3-->
-            <i class="fas fa-crow"></i>
+
+        <div class="fae"> <!--opens little div #3-->
             <h3>Fae Magics</h3>
             <p>As a descendant of a very long, prominent UnSeelie Royal Line, I am highly talented & practiced in Fae Magics. Training with this skill, starts at a very young age, even before that of Herbology & Potion Making.</p>
+            <i class="fas fa-crow"></i>
         </div> <!--closes little div #3-->
       </div><!--closes big container div-->
     </section> <!--closes skills-->
