--- a/index.html
+++ b/index.html
@@ -75,12 +75,14 @@
     <section class="contact"> <!--opens contact section-->
       <h2>Contact</h2>
       <h3>Are you looking for revenge? Luck? Or maybe just some art prints or stickers?</h3>
-      <button class="click" a href="https://www.twistedfae.com/commissions" alt="Link to TwistedFae's Commissions">Potions and Poisons and Art, Oh My!</button>
+      <div>
+        <a class="click" href="https://www.twistedfae.com/commissions" alt="Link to TwistedFae's Commissions">Potions and Poisons and Art, Oh My!</a>
+      </div>
+      <h6>Disclaimer: Purchase of Poisons, Potions, or Art could result in the loss of your Soul. Remember making deals with the Fae is a dangerous and risky endeavor. You have been warned.</h6>
     </section> <!--closes contact section-->
   </div> <!--closes main-content div-->
 
-  <footer>
-    <small>Disclaimer: Purchase of Poisons, Potions, or Art could result in the loss of your Soul. Remember making deals with the Fae is a dangerous and risky endeavor. You have been warned.</small>
+  <footer class="footer">
     <h6>Copyright TwistedFae 2019 in conjunction with IsaRaeArt 2019 & Coding_Rae 2019</h6>
   </footer>
 </body>
